--- a/src/views/submission.html
+++ b/src/views/submission.html
@@ -40,10 +40,18 @@
           <div class="axis-center-h"></div>
           <div class="axis-center-v"></div>
           
+          <!-- Axis Labels -->
           <div class="axis-label top-2 left-1/2 -translate-x-1/2">Reliable</div>
           <div class="axis-label bottom-2 left-1/2 -translate-x-1/2">Fabricated</div>
           <div class="axis-label left-2 top-1/2 -translate-y-1/2 -rotate-90">Left</div>
           <div class="axis-label right-2 top-1/2 -translate-y-1/2 rotate-90">Right</div>
+
+          <!-- Scale Numbers -->
+          <div class="axis-scale top-0 left-1/2 -translate-x-1/2 pt-1">64</div>
+          <div class="axis-scale bottom-0 left-1/2 -translate-x-1/2 pb-1">0</div>
+          <div class="axis-scale left-0 top-1/2 -translate-y-1/2 pl-1">-42</div>
+          <div class="axis-scale right-0 top-1/2 -translate-y-1/2 pr-1">42</div>
+          <div class="axis-scale top-1/2 left-1/2 translate-x-1 translate-y-1">32</div>
         </div>
       </div>
 
